--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,13 @@
 пользователя фамилию, имя и возраст. Запишите эти данные
 в сессию. При заходе на другую страницу выведите эти
 данные на экран.
+
+3. На одной странице с помощью формы спросите у
+пользователя имя, возраст, зарплату и еще что-нибудь.
+Запишите эти данные в одну переменную сессии в виде
+массива. При заходе на другую страницу переберите
+сохраненные данные циклом и выведите каждый элемент
+массива в своем теге li тега ul.
 -->
 
 <html>
@@ -42,5 +49,27 @@
         <br>
 
         <h2>Subtask 3</h2>
+        <form id="form3" action="lab3/sessions_and_cookies_p3.php" method="post">
+            <p>
+                Name: <input name="name" type="text" size="18">
+            </p>
+            <p>
+                Age: <input name="age" type="number" min="0" size="18">
+            </p>
+            <p>
+                Salary: <input name="salary" type="number" min="0" size="18">
+            </p>
+            <p>
+                Something: <input name="something" type="text" size="18">
+            </p>
+            <button>Submit and check</button>
+        </form>
+
+        <br>
+
+        <form action="lab3/destroy_session.php">
+            <button>Reset session</button>
+        </form>
+
     </body>
 </html>
